--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,8 @@ html {
 body {
     font-family: 'Roboto mono', monospace;
     font-size: 1.6rem; /*Para establecer un tamaño estandar a todo el font-size del documento;*/
-
+}
+.home-body {
     /*Para fijar nuestra pagina y que no se muestre el scroll*/
     position: fixed;
     top: 0;
@@ -30,6 +31,17 @@ a {
     display: inline;
     color: #000000;
 }
+.grid-container {
+    max-width: 120rem;
+    margin: auto;
+}
+
+/*------------------Utilidades--------------------*/
+.blogs-button {
+    border: 2px solid #47cfac;
+    padding: 1rem 1.5rem;
+    font-size: 1.2rem;
+}
 
 /*---------Medidas estandar para titulos-----------*/
 h1 {
@@ -46,7 +58,7 @@ h4 {
     font-size: 2.8rem;
 }
 
-/*---------------------------------------------------Header Global---------------------------------------------*/
+/*---------------Header Global---------------------*/
 header {
     width: 100%;
     height: 14rem;
@@ -103,6 +115,19 @@ nav .profile-link a:hover {
     text-decoration: underline;
 }
 
+/*---------------Footes Global-----------------*/
+footer {
+    width: 100%;
+    height: 11rem;
+    background-color: #22272d;
+    border-top: 3.5rem solid #47cfac;
+}
+footer p {
+    color: #ffffff;
+    margin-top: 3rem;
+    text-align: center;
+}
+
 
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!Index.html!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
@@ -148,3 +173,60 @@ nav .profile-link a:hover {
     font-family: 'Roboto mono', monospace;
     color: #ffffff;
 }
+
+
+/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!Blogs.html!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
+/*------------------------------------------------------Main----------------------------------------------------*/
+.blogs-main {
+    display: grid;
+}
+
+/*---------section .blogs-news-container -----------*/
+.blogs-news-container {
+    background-color: #e6e9ed;
+    padding: 0 5rem 4rem;
+}
+.blogs-main-new {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr;
+}
+.blogs-news-img-container {
+    grid-column: 1;
+}
+.blogs-news-img-container img {
+    width: 85%;
+}
+.blogs-news-info-container {
+    grid-column: 2;
+}
+.blogs-news-info-container p {
+    margin-bottom: 3.5rem;
+}
+
+
+
+/*---------section .blogs-posts-container -----------*/
+.blogs-posts-container {
+    padding: 0 5rem 4rem;
+    text-align: center;
+}
+.blogs-posts-container h3 {
+    border-bottom: 1px solid #cdd2da;  
+    padding-bottom: 20px;
+    text-align: center;
+}
+.blogs-posts-container .post-container {
+    display: inline-block;
+    padding-left: 1rem;
+    max-width: 30%;
+    margin-bottom: 5rem;
+}
+.blogs-posts-container .post-container p {
+    margin-bottom: 3.5rem;
+}
+.blogs-posts-container .post-container img {
+    width: 100%;
+}
+
