--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,9 @@ a {
     display: inline;
     color: #000000;
 }
+.contact-main-container a:hover {
+    color: #727272;
+}
 .grid-container {
     max-width: 120rem;
     margin: auto;
@@ -41,6 +44,9 @@ a {
     border: 2px solid #47cfac;
     padding: 1rem 1.5rem;
     font-size: 1.2rem;
+}
+.blogs-button:hover {
+    background-color: #ececec;
 }
 
 /*---------Medidas estandar para titulos-----------*/
@@ -84,6 +90,9 @@ header .header-icons-container .icons {
 header .icons span {
     color: #ffffff;
 }
+header .icons span:hover {
+    color: #ffffffd1;
+}
 nav {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -113,10 +122,10 @@ nav .profile-link a {
     font-size: 1.8rem;
 }
 nav .profile-link a:hover {
-    text-decoration: underline;
+    background-color: #3aad8f;
 }
 
-/*---------------Footes Global-----------------*/
+/*---------------Footer Global-----------------*/
 footer {
     width: 100%;
     height: 11rem;
@@ -166,6 +175,7 @@ footer p {
 }
 .home-main-button:hover {
     border: 2px solid #ffffff;
+    background-color: #3aad8f;
 }
 .home-main-button a {
     font-weight: 700;
